--- a/gemPpt/gemPpt/gemPpt.csproj
+++ b/gemPpt/gemPpt/gemPpt.csproj
@@ -9,6 +9,10 @@
   <ItemGroup>
     <PackageReference Include="GemBox.Presentation" Version="25.0.1296" />
     <PackageReference Include="GemBox.Spreadsheet" Version="49.0.1084" />
+    <PackageReference Include="RestSharp" Version="108.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="RestSharp" />
+  </ItemGroup>
 </Project>
